fix: ui bug with cmall screens and 1st project card; ui bug with chrome mobile and drop down menu not blurring

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2560,6 +2560,10 @@ html {
   margin-top: 1rem;
 }
 
+.mt-1 {
+  margin-top: 0.25rem;
+}
+
 .block {
   display: block;
 }
@@ -2630,6 +2634,10 @@ html {
 
 .w-full {
   width: 100%;
+}
+
+.w-48 {
+  width: 12rem;
 }
 
 .min-w-full {
@@ -2741,6 +2749,14 @@ html {
 
 .bg-opacity-80 {
   --tw-bg-opacity: 0.8;
+}
+
+.bg-opacity-70 {
+  --tw-bg-opacity: 0.7;
+}
+
+.bg-opacity-90 {
+  --tw-bg-opacity: 0.9;
 }
 
 .stroke-current {
@@ -3035,6 +3051,18 @@ html {
 
 .text-secondary{
   color: #ff00d3;
+}
+
+.navbar::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  -webkit-backdrop-filter: blur(4px);
+          backdrop-filter: blur(4px);
+  z-index: -1;
 }
 
 @media not all and (min-width: 768px) {
