--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -49,3 +49,14 @@
 .text-secondary{
     color: #ff00d3;
 }
+
+.navbar::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    backdrop-filter: blur(4px);
+    z-index: -1;
+}
